# 42sh

./: AUTHORS  Makefile.am  configure.ac
src/: lexeur.c  parser.c  structure.h
